<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ResultActivity">


    <TextView
            android:text="@string/choose_number"
            android:id="@+id/tv_result_activity"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

<RadioGroup


        android:id="@+id/rd_number"

        android:layout_width="match_parent" android:layout_height="wrap_content" >


    <RadioButton

            android:text="@string/_50"
            android:id="@+id/rb_50"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <RadioButton
                android:text="@string/_100"
                android:id="@+id/rb_100"
                android:layout_width="match_parent" android:layout_height="wrap_content"/>


<RadioButton
        android:text="@string/_150"
        android:id="@+id/rb_150"
        android:layout_width="match_parent"

             android:layout_height="wrap_content"/>
<RadioButton
        android:text="@string/_200"
        android:id="@+id/rb_200"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>

</RadioGroup>


<Button
        android:text="@string/choose"
        android:id="@+id/btn_choose"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>




</LinearLayout>