<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".MainActivity">
    <Button

            android:text="@string/pindah_activity1"
            android:id="@+id/pindah_activity1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button

            android:text="@string/move_with_data"
            android:id="@+id/pindah_activity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

<Button
        android:text="@string/pindah_parcel"
        android:id="@+id/btn_parcel"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>

 <Button
         android:text="@string/btn_implicit"
         android:id="@+id/btn_implicit_intent"
         android:layout_width="match_parent" android:layout_height="wrap_content"/>



</LinearLayout>